# hatrick

./: .gitignore  DEPLOY.md  LICENSE  README.md
contracts/: .gitignore  Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
contracts/migrations/: deploy.ts
contracts/programs/hat_trick/: Cargo.toml
contracts/programs/hat_trick/src/: constants.rs  error.rs  lib.rs  state.rs  verify.rs
contracts/programs/hat_trick/src/instructions/: claim.rs  initialize_market.rs  mod.rs  place_position.rs  refund.rs  settle_market.rs  void_market.rs
contracts/programs/hattrick_betting/: Cargo.toml
contracts/programs/hattrick_betting/src/: constants.rs  error.rs  lib.rs  verify.rs
contracts/programs/hattrick_betting/src/instructions/: claim.rs  initialize_market.rs  mod.rs  place_position.rs  refund.rs  settle_market.rs  void_market.rs
contracts/programs/hattrick_betting/src/state/: mod.rs
contracts/programs/hattrick_fantasy/: Cargo.toml
contracts/programs/hattrick_fantasy/src/: lib.rs
contracts/programs/hattrick_fantasy/src/errors/: mod.rs
contracts/programs/hattrick_fantasy/src/instructions/: cancel_duel.rs  deposit_stake.rs  expire_duel.rs  initialize_duel.rs  mod.rs  settle_duel.rs
contracts/programs/hattrick_fantasy/src/state/: duel_state.rs  (+1 more)
contracts/programs/hattrick_packs/: Cargo.toml
contracts/programs/hattrick_packs/src/: lib.rs
contracts/programs/hattrick_provably_fair/: Cargo.toml
contracts/programs/hattrick_provably_fair/src/: lib.rs
contracts/scripts/: e2e.cjs
contracts/tests/: hat_trick.ts  hattrick_betting.ts  hattrick_fantasy_escrow.ts  hattrick_packs.ts  hattrick_provably_fair.ts
(+1129 files in other folders)
