[workspace]
members = [
  "programs/hattrick_packs",
  "programs/hattrick_betting",
  "programs/hattrick_fantasy",
  "programs/hattrick_provably_fair",
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
