[package]
name = "hat_trick"
version = "0.1.0"
description = "Hat-trick — trustless escrow & settlement for Live Mode and Fantasy 1v1 wagers"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "hat_trick"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"
