[package]
name = "hattrick-packs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "hattrick_packs"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang              = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl               = { version = "0.31.1", features = ["token", "token_2022"] }
mpl-core                 = { version = "0.11.2", features = ["anchor"] }
hattrick-provably-fair   = { path = "../hattrick_provably_fair", features = ["cpi"] }
